docs: move example apis to v0
