# api/swagger/swagger.json
@@ -13,7 +13,10 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "This is simple Summary.",
+                "tags": [
+                    "v0"
+                ],
+                "summary": "Pong!",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -24,7 +27,7 @@
                 }
             }
         },
-        "/v1/users": {
+        "/v0/users": {
             "post": {
                 "description": "Creates a user in database.",
                 "consumes": [
@@ -32,6 +35,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "v0"
                 ],
                 "summary": "Creates a user.",
                 "parameters": [
@@ -55,7 +61,7 @@
                 }
             }
         },
-        "/v1/users/{name}": {
+        "/v0/users/{name}": {
             "get": {
                 "description": "Gets a user info from database.",
                 "consumes": [
@@ -63,6 +69,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "v0"
                 ],
                 "summary": "Gets a user info by name.",
                 "parameters": [
