# internal/namegpt/router/v0.go
@@ -1,21 +1,27 @@
 package router
 
 import (
+	"github.com/copolio/namegpt/internal/namegpt/controller"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
 
+// SetV0Routes Example routes to practice Gin
 func SetV0Routes(router *gin.Engine) *gin.Engine {
+	userController := controller.NewUserController()
 	v0 := router.Group("/api/v0")
 	{
 		v0.GET("/ping", ping())
+		v0.POST("/users", userController.CreateUser)
+		v0.GET("/users/:name", userController.GetUser)
 	}
 	return router
 }
 
 // requestPing
-// @Summary This is simple Summary.
+// @Summary Pong!
 // @Description This is detail Description.
+// @Tags v0
 // @Accept  json
 // @Produce  json
 // @Router /v0/ping [get]
